Only changed a line in the ReadME

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+I dont like Java!
+
 1)Compile:
 javac MariumAquarium.java
 
@@ -10,3 +12,5 @@ by passing it as the first argument to the program.
 
 Ex:Create an aquarium with 100 fish
 java MariumAquarium 100
+
+
